adjusted ESS, stilling using skeptical prior

--- a/13-17 ESS.qmd
+++ b/13-17 ESS.qmd
@@ -167,121 +167,148 @@ grid.arrange(p1, p2, ncol = 2)
 
 ```{r}
 library(ggplot2)
+library(gridExtra)
 
 set.seed(123)
 
-# --- 数据定义
-adult_placebo_n <- 494
-adult_placebo_events <- 45
-adult_drug_n <- 509
-adult_drug_events <- 375
+# Input data
+adult_placebo_n <- 494; adult_placebo_r <- 45
+adult_drug_n <- 509; adult_drug_r <- 375
+ped_placebo_n <- 6; ped_placebo_r <- 1
+ped_drug_n <- 30; ped_drug_r <- 15
+n_samples <- 5000
 
-pediatric_placebo_n <- 6
-pediatric_placebo_events <- 1
-pediatric_drug_n <- 30
-pediatric_drug_events <- 15
+# Pediatric-only posterior parameters (baseline for variance reduction)
+alpha_ped_placebo <- ped_placebo_r + 1
+beta_ped_placebo <- ped_placebo_n - ped_placebo_r + 1
+alpha_ped_drug <- ped_drug_r + 1
+beta_ped_drug <- ped_drug_n - ped_drug_r + 1
 
-# --- skeptical prior
-skeptical_a <- 1
-skeptical_b <- 1
+# Theoretical posterior variances (no prior)
+var_placebo_no_prior <- (alpha_ped_placebo * beta_ped_placebo) / 
+                        ((alpha_ped_placebo + beta_ped_placebo)^2 * (alpha_ped_placebo + beta_ped_placebo + 1))
+var_drug_no_prior <- (alpha_ped_drug * beta_ped_drug) /
+                     ((alpha_ped_drug + beta_ped_drug)^2 * (alpha_ped_drug + beta_ped_drug + 1))
+var_no_prior <- var_placebo_no_prior + var_drug_no_prior
 
-# --- 初始权重
-k0_1 <- 0.5
-k0_2 <- 0.5
+# Adult prior parameters
+alpha_adult_placebo <- adult_placebo_r + 1
+beta_adult_placebo <- adult_placebo_n - adult_placebo_r + 1
+alpha_adult_drug <- adult_drug_r + 1
+beta_adult_drug <- adult_drug_n - adult_drug_r + 1
 
-# --- 定义Beta-binomial likelihood函数
-beta_binomial_likelihood <- function(a, b, n, y) {
-  exp(lchoose(n, y) + lbeta(a + y, b + n - y) - lbeta(a, b))
-}
+# Skeptical prior
+alpha_skeptical <- 1
+beta_skeptical <- 1
 
-# --- Step1: 用成人数据更新成人posterior
-# 更新函数：给定skeptical prior，观测数据，返回posterior参数
-update_adult_posterior <- function(events, n) {
-  post_a <- skeptical_a + events
-  post_b <- skeptical_b + n - events
-  list(a = post_a, b = post_b)
-}
-
-# --- Step2: 用成人posterior vs skeptical prior 比较，推断儿童
-update_child_weights <- function(adult_post_a, adult_post_b, pediatric_n, pediatric_events) {
-  # 成人posterior的beta-binomial likelihood
-  likelihood_adult <- beta_binomial_likelihood(adult_post_a, adult_post_b, pediatric_n, pediatric_events)
-  # skeptical prior的beta-binomial likelihood
-  likelihood_skeptical <- beta_binomial_likelihood(skeptical_a, skeptical_b, pediatric_n, pediatric_events)
-  
-  C1_hat <- likelihood_adult
-  C2_hat <- likelihood_skeptical
-  
-  k1_new <- (k0_1 * C1_hat) / (k0_1 * C1_hat + k0_2 * C2_hat)
-  k2_new <- (k0_2 * C2_hat) / (k0_1 * C1_hat + k0_2 * C2_hat)
-  
-  list(k1_new = k1_new, k2_new = k2_new)
-}
-
-# --- 计算 Placebo组
-adult_placebo_posterior <- update_adult_posterior(adult_placebo_events, adult_placebo_n)
-placebo_child_result <- update_child_weights(
-  adult_post_a = adult_placebo_posterior$a,
-  adult_post_b = adult_placebo_posterior$b,
-  pediatric_n = pediatric_placebo_n,
-  pediatric_events = pediatric_placebo_events
+# Storage
+results <- data.frame(
+  a = numeric(),
+  ci_lower = numeric(),
+  ci_upper = numeric(),
+  median_diff = numeric(),
+  ESS_placebo = numeric(),
+  ESS_drug = numeric(),
+  ESS_total = numeric()
 )
 
-# --- 计算 Drug组
-adult_drug_posterior <- update_adult_posterior(adult_drug_events, adult_drug_n)
-drug_child_result <- update_child_weights(
-  adult_post_a = adult_drug_posterior$a,
-  adult_post_b = adult_drug_posterior$b,
-  pediatric_n = pediatric_drug_n,
-  pediatric_events = pediatric_drug_events
-)
+# Loop over adult prior weight a ∈ [0, 1]
+for (a in seq(0, 1, by = 0.02)) {
+  # Weighted prior parameters
+  alpha_prior_placebo <- a * alpha_adult_placebo + (1 - a) * alpha_skeptical
+  beta_prior_placebo <- a * beta_adult_placebo + (1 - a) * beta_skeptical
+  alpha_prior_drug <- a * alpha_adult_drug + (1 - a) * alpha_skeptical
+  beta_prior_drug <- a * beta_adult_drug + (1 - a) * beta_skeptical
 
-# --- Step3: 计算混合ESS
-adult_placebo_ess <- adult_placebo_posterior$a + adult_placebo_posterior$b
-adult_drug_ess <- adult_drug_posterior$a + adult_drug_posterior$b
-skeptical_ess <- skeptical_a + skeptical_b
+  # Posterior parameters (prior + pediatric data)
+  alpha_post_placebo <- alpha_prior_placebo + ped_placebo_r
+  beta_post_placebo <- beta_prior_placebo + ped_placebo_n - ped_placebo_r
+  alpha_post_drug <- alpha_prior_drug + ped_drug_r
+  beta_post_drug <- beta_prior_drug + ped_drug_n - ped_drug_r
 
-placebo_ESS_mixture <- placebo_child_result$k1_new * adult_placebo_ess + placebo_child_result$k2_new * skeptical_ess
-drug_ESS_mixture <- drug_child_result$k1_new * adult_drug_ess + drug_child_result$k2_new * skeptical_ess
+  # Posterior samples
+  samples_placebo <- rbeta(n_samples, alpha_post_placebo, beta_post_placebo)
+  samples_drug <- rbeta(n_samples, alpha_post_drug, beta_post_drug)
+  diff <- samples_drug - samples_placebo
 
-# --- 打印输出
-cat("Placebo组:\n")
-cat("  成人posterior 权重 =", round(placebo_child_result$k1_new, 4), "\n")
-cat("  Skeptical prior 权重 =", round(placebo_child_result$k2_new, 4), "\n")
-cat("  混合先验 ESS =", round(placebo_ESS_mixture, 2), "\n\n")
+  ci_lower <- quantile(diff, 0.025)
+  ci_upper <- quantile(diff, 0.975)
+  median_diff <- median(diff)
 
-cat("Drug组:\n")
-cat("  成人posterior 权重 =", round(drug_child_result$k1_new, 4), "\n")
-cat("  Skeptical prior 权重 =", round(drug_child_result$k2_new, 4), "\n")
-cat("  混合先验 ESS =", round(drug_ESS_mixture, 2), "\n")
+  # Variance of fused posterior
+  var_placebo_with_prior <- (alpha_post_placebo * beta_post_placebo) /
+                            ((alpha_post_placebo + beta_post_placebo)^2 * (alpha_post_placebo + beta_post_placebo + 1))
+  var_drug_with_prior <- (alpha_post_drug * beta_post_drug) /
+                         ((alpha_post_drug + beta_post_drug)^2 * (alpha_post_drug + beta_post_drug + 1))
+  
+  # ESS via variance reduction (non-negative)
+  ess_placebo <- max(0, ped_placebo_n * (var_placebo_no_prior / var_placebo_with_prior - 1))
+  ess_drug <- max(0, ped_drug_n * (var_drug_no_prior / var_drug_with_prior - 1))
+  ess_total <- ess_placebo + ess_drug
 
-# --- Step4: ESS贡献图
-ess_df <- data.frame(
-  group = c(rep("Placebo", 2), rep("Drug", 2)),
-  prior_component = rep(c("Adult posterior", "Skeptical prior"), 2),
-  weight = c(
-    placebo_child_result$k1_new, placebo_child_result$k2_new,
-    drug_child_result$k1_new, drug_child_result$k2_new
-  ),
-  ess_contribution = c(
-    placebo_child_result$k1_new * adult_placebo_ess,
-    placebo_child_result$k2_new * skeptical_ess,
-    drug_child_result$k1_new * adult_drug_ess,
-    drug_child_result$k2_new * skeptical_ess
-  )
-)
+  results <- rbind(results, data.frame(
+    a = a,
+    ci_lower = ci_lower,
+    ci_upper = ci_upper,
+    median_diff = median_diff,
+    ESS_placebo = ess_placebo,
+    ESS_drug = ess_drug,
+    ESS_total = ess_total
+  ))
+}
 
-ggplot(ess_df, aes(x = prior_component, y = ess_contribution, fill = prior_component)) +
-  geom_bar(stat = "identity", position = "dodge") +
-  facet_wrap(~group, scales = "free_y") +
-  geom_text(aes(label = round(ess_contribution,1)), vjust = -0.5, position = position_dodge(width = 0.9)) +
+# Find tipping point
+tipping_point <- results[which(results$ci_lower > 0)[1], ]
+
+# Print results
+cat("✅ Tipping Point Found:\n")
+cat("Adult Prior Weight (a):", tipping_point$a, "\n")
+cat("Posterior Difference (Drug - Placebo):", round(tipping_point$median_diff, 3), "\n")
+cat("95% CI: (", round(tipping_point$ci_lower, 3), ",", round(tipping_point$ci_upper, 3), ")\n")
+cat("ESS from adult placebo:", round(tipping_point$ESS_placebo, 1), "\n")
+cat("ESS from adult drug:", round(tipping_point$ESS_drug, 1), "\n")
+cat("Total ESS (variance reduction):", round(tipping_point$ESS_total, 1), "\n")
+
+# Plots
+p1 <- ggplot(results, aes(x = a)) +
+  geom_line(aes(y = median_diff), color = "blue", size = 1.2) +
+  geom_ribbon(aes(ymin = ci_lower, ymax = ci_upper), fill = "skyblue", alpha = 0.3) +
+  geom_hline(yintercept = 0, linetype = "dashed", color = "red") +
+  geom_vline(xintercept = tipping_point$a, linetype = "dashed", color = "darkred") +
   labs(
-    title = "各组混合先验的ESS贡献 (统一Beta-binomial)",
-    x = "",
-    y = "Effective Sample Size (ESS)"
-  ) +
-  theme_minimal() +
-  theme(legend.position = "none")
+    title = "Posterior Response Rate Difference (Drug - Placebo)",
+    x = "Adult Prior Weight (a)",
+    y = "Posterior Difference"
+  ) + theme_minimal()
+
+p2 <- ggplot(results, aes(x = a)) +
+  geom_line(aes(y = ESS_placebo), color = "purple", size = 1.2) +
+  geom_line(aes(y = ESS_drug), color = "darkgreen", size = 1.2) +
+  geom_vline(xintercept = tipping_point$a, linetype = "dashed", color = "red") +
+  labs(
+    title = "Component-wise ESS (Variance Reduction)",
+    x = "Adult Prior Weight (a)",
+    y = "Component ESS"
+  ) + theme_minimal()
+
+p3 <- ggplot(results, aes(x = a, y = ESS_total)) +
+  geom_line(color = "darkorange", size = 1.2) +
+  geom_vline(xintercept = tipping_point$a, linetype = "dashed", color = "red") +
+  labs(
+    title = "Total Effective Sample Size (Variance Reduction)",
+    x = "Adult Prior Weight (a)",
+    y = "Total ESS"
+  ) + theme_minimal()
+
+grid.arrange(p1, p2, p3, ncol = 1)
 
 
+
+
+
+```
+
+```{r}
+var_drug_with_prior
+var_drug_no_prior
 ```
