--- a/PowerPrior(RR).Rmd
+++ b/PowerPrior(RR).Rmd
@@ -679,6 +679,51 @@ plot_variance_ratio <- function(ess_results, tipping_point = NA) {
   
   return(p)
 }
+
+# 创建ESS图 (Beta-Binomial)
+plot_ess_from_variance <- function(ess_results, tipping_point = NA, ped_data) {
+  alpha_min <- min(ess_results$alpha)
+  alpha_max <- max(ess_results$alpha)
+  n_total <- ped_data$n_drug + ped_data$n_placebo
+  
+  p <- ggplot(ess_results, aes(x = alpha)) +
+    geom_line(aes(y = ess_total), size = 1, color = "orange") +
+    geom_hline(yintercept = n_total, linetype = "dashed", color = "blue", 
+              size = 0.8) +
+    annotate("text", x = alpha_min + (alpha_max - alpha_min) * 0.05, 
+            y = n_total * 1.05, 
+            label = paste0("Pediatric Sample Size: ", n_total),
+            color = "blue", hjust = 0) +
+    labs(title = "Effective Sample Size Analysis based on Variance Ratio",
+         subtitle = "ESS = n * V1/V2 where V1, V2 are variances without and with borrowing",
+         x = "Borrowing Weight (α)",
+         y = "Effective Sample Size") +
+    theme_minimal() +
+    scale_x_continuous(labels = scales::percent_format(accuracy = 0.1))
+  
+    # 添加借用样本大小标签
+  p <- p + scale_y_continuous(
+    name = "Effective Sample Size",
+    sec.axis = sec_axis(~(. - n_total), name = "Borrowed Sample Size")
+  )
+  
+  if (!is.na(tipping_point)) {
+    tp_idx <- which(abs(ess_results$alpha - tipping_point) == min(abs(ess_results$alpha - tipping_point)))
+    tp_ess <- ess_results$ess_total[tp_idx]
+    tp_borrowed <- ess_results$borrowed[tp_idx]
+    
+    p <- p + 
+      geom_vline(xintercept = tipping_point, linetype = "dotted", color = "purple", size = 1) +
+      annotate("text", x = tipping_point + (alpha_max - alpha_min) * 0.05, 
+               y = max(ess_results$ess_total) * 0.5,
+               label = paste0("ESS at TP: ", round(tp_ess, 1), 
+                             "\nBorrowed: ", round(tp_borrowed, 1)),
+               color = "purple", hjust = 0)
+  }
+  
+  return(p)
+}
+  
 ```
 
 ### Main Function
@@ -757,265 +802,3 @@ cat("Corresponding ESS:", tp_analysis$tipping_point_ess, "\n")
 ```
 
 
-
-
-
-
-
-
-
-
-
-
-
-```{r}
-#------ Power Prior: Tipping Point Analysis ------
-# Analyze, compare, and visualize Power Prior (RJAGS & Beta-Binomial) across a range of α values,
-# and identify tipping points where the lower bound of the 95% CrI for OR exceeds 1.
-
-tipping_point_analysis <- function(ped_data, adult_data, method = "both",
-                                  alpha_min = 0.001, alpha_max = 0.01, steps = 100) {
-  alpha_seq <- seq(alpha_min, alpha_max, length.out = steps)
-  results <- data.frame()
-  
-  for (alpha in alpha_seq) {
-    if (method %in% c("both", "RJAGS")) {
-      rjags_res <- power_prior_rjags(ped_data, adult_data, alpha)
-      results <- rbind(results, data.frame(
-        alpha = alpha,
-        method = "RJAGS",
-        median_logor = rjags_res$median_rr_diff,
-        lower_ci = rjags_res$ci_95[1],
-        upper_ci = rjags_res$ci_95[2],
-        prob_gt_0 = rjags_res$prob_gt_0  # 注意是 log(OR) > 0
-
-      ))
-    }
-    
-    if (method %in% c("both", "Beta-Binomial")) {
-      beta_res <- power_prior_beta(ped_data, adult_data, alpha)
-      results <- rbind(results, data.frame(
-        alpha = alpha,
-        method = "Beta-Binomial",
-        median_rr_diff = beta_res$median_rr_diff,
-        lower_ci = beta_res$ci_95[1],
-        upper_ci = beta_res$ci_95[2],
-        prob_gt_0 = beta_res$prob_gt_0
-      ))
-    }
-  }
-  
-  # Identify tipping points (first alpha where 95% CrI lower bound > 1)
-  if ("RJAGS" %in% unique(results$method)) {
-    rjags_data <- subset(results, method == "RJAGS")
-    rjags_tp_idx <- which(rjags_data$lower_ci > 0)[1]
-    rjags_tipping <- ifelse(is.na(rjags_tp_idx), NA, rjags_data$alpha[rjags_tp_idx])
-    cat("RJAGS Tipping Point (OR lower bound > 1):", ifelse(is.na(rjags_tipping), "Not Found", 
-                                              paste0(scales::percent(rjags_tipping, accuracy = 0.001))), "\n")
-  }
-  
-  if ("Beta-Binomial" %in% unique(results$method)) {
-    beta_data <- subset(results, method == "Beta-Binomial")
-    beta_tp_idx <- which(beta_data$lower_ci > 0)[1]
-    beta_tipping <- ifelse(is.na(beta_tp_idx), NA, beta_data$alpha[beta_tp_idx])
-    cat("Beta-Binomial Tipping Point (OR lower bound > 1):", ifelse(is.na(beta_tipping), "Not Found", 
-                                                     paste0(scales::percent(beta_tipping, accuracy = 0.001))), "\n")
-  }
-  
-  # Create visualization
- p <- ggplot(results, aes(x = alpha, color = method, group = method)) +
-    geom_line(aes(y = median_logor), size = 1) +
-    geom_ribbon(aes(ymin = lower_ci, ymax = upper_ci, fill = method), alpha = 0.2) +
-    geom_hline(yintercept = 0, linetype = "dashed", color = "black") +
-    labs(title = "Tipping Point Analysis: Borrowing Weight vs log(OR)",
-         subtitle = "Showing 95% Credible Intervals for log(OR)",
-         x = "Borrowing Weight (α)",
-         y = "Log Odds Ratio (log(OR))",
-         color = "Method",
-         fill = "Method") +
-    theme_minimal() +
-    scale_x_continuous(labels = scales::percent_format(accuracy = 0.001))
-
-  
-  # Annotate tipping points on plot if available
-  if (exists("rjags_tipping") && !is.na(rjags_tipping)) {
-    p <- p + geom_vline(xintercept = rjags_tipping, linetype = "dotted", 
-                       color = "blue", size = 1)
-  }
-  
-  if (exists("beta_tipping") && !is.na(beta_tipping)) {
-    p <- p + geom_vline(xintercept = beta_tipping, linetype = "dotted", 
-                       color = "red", size = 1)
-  }
-  
-  return(list(
-    results = results,
-    plot = p,
-    rjags_tipping = if (exists("rjags_tipping")) rjags_tipping else NA,
-    beta_tipping = if (exists("beta_tipping")) beta_tipping else NA
-  ))
-}
-
-```
-
-
-```{r}
-# More fine-grained tipping point analysis, focusing on the range between 0.1% and 0.8%
-tp_analysis <- tipping_point_analysis_rr_diff(pediatric_data, adult_data, 
-                                      alpha_min = 0.001, 
-                                      alpha_max = 0.008, 
-                                      steps = 70)
-```
-
-```{r}
-# Output the exact tipping point values (displayed as percentages)
-cat("\n--- Tipping Point Values (Information Borrowing Weight) ---\n")
-cat("RJAGS Method:", ifelse(is.na(tp_analysis$rjags_tipping), "Not found", 
-                      paste0(scales::percent(tp_analysis$rjags_tipping, accuracy = 0.001))), "\n")
-cat("Beta-Binomial Method:", ifelse(is.na(tp_analysis$beta_tipping), "Not found", 
-                             paste0(scales::percent(tp_analysis$beta_tipping, accuracy = 0.001))), "\n")
-
-```
-
-Calculate Effective Sample Size (ESS)
-
-```{r}
-# Method 1: ESS for Beta-Binomial method
-evaluate_ess_beta <- function(ped_data, adult_data, alpha) {
-  # For Beta-Binomial model, ESS = alpha * historical sample size
-  ess_treat <- alpha * adult_data$n_drug
-  ess_placebo <- alpha * adult_data$n_placebo
-  ess_total <- ess_treat + ess_placebo
-  
-  ess_ratio_treat <- ess_treat / ped_data$n_drug
-  ess_ratio_placebo <- ess_placebo / ped_data$n_placebo
-  ess_ratio_total <- ess_total / (ped_data$n_drug + ped_data$n_placebo)
-  
-  return(list(
-    ess_treat = ess_treat,
-    ess_placebo = ess_placebo,
-    ess_total = ess_total,
-    ess_ratio_treat = ess_ratio_treat,
-    ess_ratio_placebo = ess_ratio_placebo,
-    ess_ratio_total = ess_ratio_total
-  ))
-}
-```
-
-```{r}
-# Method 2: ESS for RJAGS method (same calculation logic, because adult info is down-weighted by alpha)
-evaluate_ess_rjags <- function(ped_data, adult_data, alpha) {
-  # In RJAGS with power prior, effective contribution is also alpha * sample size
-  ess_treat <- alpha * adult_data$n_drug
-  ess_placebo <- alpha * adult_data$n_placebo
-  ess_total <- ess_treat + ess_placebo
-  
-  ess_ratio_treat <- ess_treat / ped_data$n_drug
-  ess_ratio_placebo <- ess_placebo / ped_data$n_placebo
-  ess_ratio_total <- ess_total / (ped_data$n_drug + ped_data$n_placebo)
-  
-  return(list(
-    ess_treat = ess_treat,
-    ess_placebo = ess_placebo,
-    ess_total = ess_total,
-    ess_ratio_treat = ess_ratio_treat,
-    ess_ratio_placebo = ess_ratio_placebo,
-    ess_ratio_total = ess_ratio_total
-  ))
-}
-```
-
-```{r}
-#------ Summarize ESS at Tipping Point ------
-
-# Assuming tipping point results already available from previous analysis
-tp_rjags_alpha <- tp_analysis$rjags_tipping
-tp_beta_alpha <- tp_analysis$beta_tipping
-
-# Calculate ESS at RJAGS tipping point
-if (!is.na(tp_rjags_alpha)) {
-  ess_rjags <- evaluate_ess_rjags(pediatric_data, adult_data, tp_rjags_alpha)
-  cat("\n--- ESS at RJAGS Tipping Point (", scales::percent(tp_rjags_alpha, accuracy = 0.001), ") ---\n")
-  cat("Treatment ESS:", round(ess_rjags$ess_treat, 2), "\n")
-  cat("Placebo ESS:", round(ess_rjags$ess_placebo, 2), "\n")
-  cat("Total ESS:", round(ess_rjags$ess_total, 2), "\n")
-  cat("ESS to pediatric sample size ratio:", round(ess_rjags$ess_ratio_total, 3), "\n")
-}
-
-# Calculate ESS at Beta-Binomial tipping point
-if (!is.na(tp_beta_alpha)) {
-  ess_beta <- evaluate_ess_beta(pediatric_data, adult_data, tp_beta_alpha)
-  cat("\n--- ESS at Beta-Binomial Tipping Point (", scales::percent(tp_beta_alpha, accuracy = 0.001), ") ---\n")
-  cat("Treatment ESS:", round(ess_beta$ess_treat, 2), "\n")
-  cat("Placebo ESS:", round(ess_beta$ess_placebo, 2), "\n")
-  cat("Total ESS:", round(ess_beta$ess_total, 2), "\n")
-  cat("ESS to pediatric sample size ratio:", round(ess_beta$ess_ratio_total, 3), "\n")
-}
-```
-plot how the Effective Sample Size (ESS) changes with α for the RJAGS and Beta-Binomial.
-
-```{r}
-# Create ESS calculation function
-calculate_ess <- function(ped_data, adult_data, alpha) {
-  ess_treat <- alpha * adult_data$n_drug
-  ess_placebo <- alpha * adult_data$n_placebo
-  ess_total <- ess_treat + ess_placebo
-  ess_ratio_total <- ess_total / (ped_data$n_drug + ped_data$n_placebo)
-  
-  return(list(
-    ess_treat = ess_treat,
-    ess_placebo = ess_placebo,
-    ess_total = ess_total,
-    ess_ratio_total = ess_ratio_total
-  ))
-}
-
-# Add ESS calculation to the tipping point results
-tp_results_with_ess <- tp_analysis$results %>%
-  mutate(
-    ess_treat = alpha * adult_data$n_drug,
-    ess_placebo = alpha * adult_data$n_placebo,
-    ess_total = ess_treat + ess_placebo,
-    ess_ratio_total = ess_total / (pediatric_data$n_drug + pediatric_data$n_placebo)
-  )
-
-# Separate RJAGS and Beta-Binomial results
-rjags_ess <- tp_results_with_ess %>% filter(method == "RJAGS")
-beta_ess <- tp_results_with_ess %>% filter(method == "Beta-Binomial")
-
-# Plot for RJAGS
-ess_plot_rjags <- ggplot(rjags_ess, aes(x = alpha)) +
-  geom_area(aes(y = ess_total), fill = "lightblue", alpha = 0.4) +
-  geom_line(aes(y = ess_treat), color = "red", size = 1, linetype = "solid") +
-  geom_line(aes(y = ess_placebo), color = "darkgreen", size = 1, linetype = "dashed") +
-  {if (!is.na(tp_analysis$rjags_tipping))
-    geom_vline(xintercept = tp_analysis$rjags_tipping, color = "blue", linetype = "dotted", size = 1)} +
-  labs(title = "Effective Sample Size Components (RJAGS Method)",
-       x = "Borrowing Weight (α)",
-       y = "Effective Sample Size",
-       fill = "",
-       color = "") +
-  theme_minimal() +
-  scale_x_continuous(labels = scales::percent_format(accuracy = 0.1)) +
-  theme(legend.position = "bottom")
-
-# Plot for Beta-Binomial
-ess_plot_beta <- ggplot(beta_ess, aes(x = alpha)) +
-  geom_area(aes(y = ess_total), fill = "lightpink", alpha = 0.4) +
-  geom_line(aes(y = ess_treat), color = "red", size = 1, linetype = "solid") +
-  geom_line(aes(y = ess_placebo), color = "darkgreen", size = 1, linetype = "dashed") +
-  {if (!is.na(tp_analysis$beta_tipping))
-    geom_vline(xintercept = tp_analysis$beta_tipping, color = "red", linetype = "dotted", size = 1)} +
-  labs(title = "Effective Sample Size Components (Beta-Binomial Method)",
-       x = "Borrowing Weight (α)",
-       y = "Effective Sample Size",
-       fill = "",
-       color = "") +
-  theme_minimal() +
-  scale_x_continuous(labels = scales::percent_format(accuracy = 0.1)) +
-  theme(legend.position = "bottom")
-
-# Print the two plots separately
-print(ess_plot_rjags)
-print(ess_plot_beta)
-```
