--- a/13-17 ESS.qmd
+++ b/13-17 ESS.qmd
@@ -170,6 +170,12 @@ library(ggplot2)
 library(gridExtra)
 library(dplyr)
 
+compute_Cj_exact <- function(a_j, b_j, x, n) {
+  choose(n, x) *
+    beta(a_j + x, b_j + n - x) /
+    beta(a_j, b_j)
+}
+
 set.seed(123)
 
 # 成人组数据
@@ -208,7 +214,7 @@ beta_skeptical <- 1
 
 # 初始化结果表格
 results <- data.frame(
-  a = numeric(),
+  k = numeric(),
   ci_lower = numeric(),
   ci_upper = numeric(),
   median_diff = numeric(),
@@ -218,57 +224,77 @@ results <- data.frame(
   prob_superior = numeric()
 )
 
-# 遍历 adult 信息的权重 a ∈ [0, 1]
-for (a in seq(0, 1, by = 0.002)) {
-  # 形成混合先验参数（adult 与 skeptical）
-  alpha_prior_placebo <- a * alpha_adult_placebo + (1 - a) * alpha_skeptical
-  beta_prior_placebo <- a * beta_adult_placebo + (1 - a) * beta_skeptical
-  alpha_prior_drug <- a * alpha_adult_drug + (1 - a) * alpha_skeptical
-  beta_prior_drug <- a * beta_adult_drug + (1 - a) * beta_skeptical
+# 遍历 k ∈ [0, 1]
+for (k in seq(0, 1, by = 0.002)) {
+  
+  # 初始化先验混合权重
+  k0 <- c(k, 1 - k)
 
+  # 成分1（成人先验）参数
+  aj1 <- alpha_adult_drug
+  bj1 <- beta_adult_drug
+
+  # 成分2（怀疑性先验）参数
+  aj2 <- alpha_skeptical
+  bj2 <- beta_skeptical
+
+  # C1, C2: 每个成分的边际似然乘以似然（比例项）
+  C1 <- compute_Cj_exact(aj1, bj1, ped_drug_r, ped_drug_n)
+  C2 <- compute_Cj_exact(aj2, bj2, ped_drug_r, ped_drug_n)
+  Cj <- c(C1, C2)
+
+  # 更新混合权重
+  k1 <- k0 * Cj
+  k1 <- k1 / sum(k1)
+
+  # 形成混合先验参数（adult 与 skeptical）
+  alpha_prior_placebo <- k * alpha_adult_placebo + (1 - k) * alpha_skeptical
+  beta_prior_placebo <- k * beta_adult_placebo + (1 - k) * beta_skeptical
+  alpha_prior_drug <- k * alpha_adult_drug + (1 - k) * alpha_skeptical
+  beta_prior_drug <- k * beta_adult_drug + (1 - k) * beta_skeptical
+
+  # 后验A: 成人先验 + 儿童数据
   alpha_post_adult_placebo <- alpha_adult_placebo + ped_placebo_r
-  beta_post_adult_placebo <- beta_adult_placebo + ped_placebo_n -ped_placebo_r
+  beta_post_adult_placebo <- beta_adult_placebo + ped_placebo_n - ped_placebo_r
   alpha_post_adult_drug <- alpha_adult_drug + ped_drug_r
   beta_post_adult_drug <- beta_adult_drug + ped_drug_n - ped_drug_r
 
-# 后验B: 怀疑先验 + 儿童数据
+  # 后验B: 怀疑先验 + 儿童数据
   alpha_post_skeptical_placebo <- alpha_skeptical + ped_placebo_r
   beta_post_skeptical_placebo <- beta_skeptical + ped_placebo_n - ped_placebo_r
   alpha_post_skeptical_drug <- alpha_skeptical + ped_drug_r
   beta_post_skeptical_drug <- beta_skeptical + ped_drug_n - ped_drug_r
 
-  set.seed(123)
+  # 从混合后的分布中进行采样
+  samples_adult_placebo <- rbeta(n_samples, alpha_post_adult_placebo, beta_post_adult_placebo)
+  samples_adult_drug <- rbeta(n_samples, alpha_post_adult_drug, beta_post_adult_drug)
 
-# Step 2: 从混合后的分布中进行采样
-samples_adult_placebo <- rbeta(n_samples, alpha_post_adult_placebo, beta_post_adult_placebo)
-samples_adult_drug <- rbeta(n_samples, alpha_post_adult_drug, beta_post_adult_drug)
+  samples_skeptical_placebo <- rbeta(n_samples, alpha_post_skeptical_placebo, beta_post_skeptical_placebo)
+  samples_skeptical_drug <- rbeta(n_samples, alpha_post_skeptical_drug, beta_post_skeptical_drug)
 
-samples_skeptical_placebo <- rbeta(n_samples, alpha_post_skeptical_placebo, beta_post_skeptical_placebo)
-samples_skeptical_drug <- rbeta(n_samples, alpha_post_skeptical_drug, beta_post_skeptical_drug)
+  # 按权重混合采样
+  samples_placebo <- k * samples_adult_placebo + (1 - k) * samples_skeptical_placebo
+  samples_drug <- k1[1] * samples_adult_drug + k1[2] * samples_skeptical_drug
 
-samples_placebo <- a * samples_adult_placebo + (1 - a) * samples_skeptical_placebo
-
-samples_drug <- a * samples_adult_drug + (1 - a) * samples_skeptical_drug
-
+  # 计算差异
   diff <- samples_drug - samples_placebo
 
+  # 计算统计量
   ci_lower <- quantile(diff, 0.025)
   ci_upper <- quantile(diff, 0.975)
   median_diff <- median(diff)
-  prob_superior <- mean(diff > 0)  # 药物优效的概率
+  prob_superior <- mean(diff > 0)
 
-# ESS 计算：混合分布的样本方差
-var_post_placebo <- var(samples_placebo)
-var_post_drug <- var(samples_drug)
+  # ESS 计算
+  var_post_placebo <- var(samples_placebo)
+  var_post_drug <- var(samples_drug)
+  ess_placebo <- max(0, ped_placebo_n * (var_placebo_no_prior / var_post_placebo - 1))
+  ess_drug <- max(0, ped_drug_n * (var_drug_no_prior / var_post_drug - 1))
+  ess_total <- ess_placebo + ess_drug
 
-# ESS 基于方差缩减
-ess_placebo <- max(0, ped_placebo_n * (var_placebo_no_prior / var_post_placebo - 1))
-ess_drug <- max(0, ped_drug_n * (var_drug_no_prior / var_post_drug - 1))
-ess_total <- ess_placebo + ess_drug
-
-
+  # 存储结果
   results <- rbind(results, data.frame(
-    a = a,
+    k = k,
     ci_lower = ci_lower,
     ci_upper = ci_upper,
     median_diff = median_diff,
@@ -279,13 +305,14 @@ ess_total <- ess_placebo + ess_drug
   ))
 }
 
+# 寻找 tipping point
 tipping_point <- results %>% 
   filter(ci_lower > 0) %>% 
   slice(1)
 
-# 输出 tipping point 信息
+# 输出结果
 cat("✅ Tipping Point Found:\n")
-cat("Adult Prior Weight (a):", tipping_point$a, "\n")
+cat("Adult Prior Weight (k):", tipping_point$k, "\n")
 cat("Posterior Difference (Drug - Placebo):", round(tipping_point$median_diff, 3), "\n")
 cat("95% CI: (", round(tipping_point$ci_lower, 3), ",", round(tipping_point$ci_upper, 3), ")\n")
 cat("Pr(Drug > Placebo):", round(tipping_point$prob_superior, 3), "\n")
@@ -294,35 +321,37 @@ cat("ESS from adult drug:", round(tipping_point$ESS_drug, 1), "\n")
 cat("Total ESS (variance reduction):", round(tipping_point$ESS_total, 1), "\n")
 
 # 可视化
-p1 <- ggplot(results, aes(x = a)) +
+p1 <- ggplot(results, aes(x = k)) +
   geom_line(aes(y = median_diff), color = "blue", size = 1.2) +
   geom_ribbon(aes(ymin = ci_lower, ymax = ci_upper), fill = "skyblue", alpha = 0.3) +
   geom_hline(yintercept = 0, linetype = "dashed", color = "red") +
-  geom_vline(xintercept = tipping_point$a, linetype = "dashed", color = "darkred") +
+  geom_vline(xintercept = tipping_point$k, linetype = "dashed", color = "darkred") +
   labs(
     title = "Posterior Response Rate Difference (Drug - Placebo)",
-    x = "Adult Prior Weight (a)",
+    x = "Adult Prior Weight (k)",
     y = "Posterior Difference"
   ) + theme_minimal()
 
-p2 <- ggplot(results, aes(x = a)) +
+p2 <- ggplot(results, aes(x = k)) +
   geom_line(aes(y = prob_superior), color = "purple", size = 1.2) +
   geom_hline(yintercept = 0.975, linetype = "dashed", color = "red") +
-  geom_vline(xintercept = tipping_point$a, linetype = "dotted", color = "darkgreen") +
+  geom_vline(xintercept = tipping_point$k, linetype = "dotted", color = "darkgreen") +
   labs(
     title = "Pr(Drug > Placebo) vs Adult Prior Weight",
-    x = "Adult Prior Weight (a)", y = "Pr(Drug > Placebo)"
+    x = "Adult Prior Weight (k)", 
+    y = "Pr(Drug > Placebo)"
   ) + theme_minimal()
 
-p3 <- ggplot(results, aes(x = a)) +
+p3 <- ggplot(results, aes(x = k)) +
   geom_line(aes(y = ESS_total), color = "darkorange", size = 1.2) +
-  geom_vline(xintercept = tipping_point$a, linetype = "dashed", color = "red") +
+  geom_vline(xintercept = tipping_point$k, linetype = "dashed", color = "red") +
   labs(
     title = "Total Effective Sample Size (Variance Reduction)",
-    x = "Adult Prior Weight (a)",
+    x = "Adult Prior Weight (k)",
     y = "Total ESS"
   ) + theme_minimal()
 
+# 合并图表
 grid.arrange(p1, p2, p3, ncol = 1)
 
 
